apps/oauth2-proxy/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`auth.arcamh.com`)
      priority: 10
      services:
        - name: oauth2-proxy
          namespace: oauth2-proxy
          port: 80
